test/corpus/annotations.txt
================================================================================
Annotations
================================================================================

@Test
class Empty { }

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (modifiers
      (attribute
        (user_type
          (type_identifier))))
    (type_identifier)
    (class_body)))

================================================================================
Multiple annotations on a variable
================================================================================

class X {
 @A @B
 override let s: String
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (type_identifier)
    (class_body
      (property_declaration
        (modifiers
          (attribute
            (user_type
              (type_identifier)))
          (attribute
            (user_type
              (type_identifier)))
          (member_modifier))
        (value_binding_pattern)
        (pattern
          (simple_identifier))
        (type_annotation
          (user_type
            (type_identifier)))))))

================================================================================
Multiple annotations on a function
================================================================================

class X {
 @A @B
 func s() -> String { }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (type_identifier)
    (class_body
      (function_declaration
        (modifiers
          (attribute
            (user_type
              (type_identifier)))
          (attribute
            (user_type
              (type_identifier))))
        (simple_identifier)
        (user_type
          (type_identifier))
        (function_body)))))

================================================================================
Annotation with an empty argument list
================================================================================

@Test()
class Empty { }

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (modifiers
      (attribute
        (user_type
          (type_identifier))))
    (type_identifier)
    (class_body)))

================================================================================
Unsafe attribute on a function
================================================================================

@unsafe func f() {}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (modifiers
      (attribute
        (user_type
          (type_identifier))))
    (simple_identifier)
    (function_body)))

================================================================================
Safe attribute on a final class
================================================================================

@safe final class C {}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    (modifiers
      (attribute
        (user_type
          (type_identifier)))
      (inheritance_modifier))
    (type_identifier)
    (class_body)))

================================================================================
Back deployed attribute with a version label
================================================================================

@backDeployed(before: macOS 14) public func f() {}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (modifiers
      (attribute
        (user_type
          (type_identifier))
        (simple_identifier)
        (simple_identifier)
        (integer_literal))
      (visibility_modifier))
    (simple_identifier)
    (function_body)))
